# libcorefungi

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md  README.rst  libcorefungi-config.cmake
include/: corefungi.hpp
include/corefungi/: corefungi.hpp  manipulable.hpp  node.hpp  node_ref.hpp  option.hpp  ostream.hpp  spore.hpp  sprout.hpp
include/corefungi/detail/: lexical_cast.hpp  reference.hpp  singleton.hpp
src/corefungi/: cmdline.cpp  collect.cpp  corefungi.cpp  dict.cpp  grow.cpp  init.cpp  mutate.cpp  mutate.hpp  option.cpp  paths.cpp  paths.hpp  prefix.hpp.in  sprout.cpp  yaml_parser.hpp
test/: ostream.hpp  test1.cpp  test2.cpp
